[gd_scene load_steps=18 format=3 uid="uid://cn3j8v3mf377w"]

[ext_resource type="Script" path="res://Maps/GeneralCode/level_script.gd" id="1_fmd0r"]
[ext_resource type="Shader" path="res://Maps/Shaders/Stars.gdshader" id="2_78d1e"]
[ext_resource type="Shader" path="res://Maps/Shaders/Crt.gdshader" id="3_imx3e"]
[ext_resource type="TileSet" uid="uid://bqd1uyu2n62xx" path="res://Maps/maps/waiting place.tres" id="4_t2aa6"]
[ext_resource type="Script" path="res://Maps/tile_map.gd" id="5_elis8"]
[ext_resource type="Script" path="res://Player/Code/chacter_handaler_hone.gd" id="6_qhikm"]
[ext_resource type="Script" path="res://Maps/maps/area_2d_change_scene.gd" id="7_rxl3x"]
[ext_resource type="PackedScene" uid="uid://dqt4dyyvjxx73" path="res://Player/player.tscn" id="10_bj6lp"]
[ext_resource type="PackedScene" uid="uid://d246wja3tllss" path="res://NPCS/Wrath/Wryan.tscn" id="11_tj8p1"]
[ext_resource type="PackedScene" uid="uid://bq34rsfrbk2ne" path="res://NPCS/Pride/Primo_pride.tscn" id="12_86oiy"]
[ext_resource type="Script" path="res://NPCS/dialogue_world.gd" id="13_4pqbm"]
[ext_resource type="Shader" path="res://Maps/TestMap/Lighting.gdshader" id="14_5i2ep"]
[ext_resource type="Script" path="res://Maps/Shaders/Lighting.gd" id="15_4w327"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0ic8p"]
shader = ExtResource("2_78d1e")
shader_parameter/dimensions = Vector2(1024, 2048)
shader_parameter/small_stars = 200.0
shader_parameter/small_stars_far_size = 1.0
shader_parameter/small_stars_near_size = 1.0
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.1
shader_parameter/large_stars_near_size = 1.0
shader_parameter/far_stars_color = Color(0.545098, 0.427451, 0.611765, 1)
shader_parameter/near_stars_color = Color(0.776471, 0.623529, 0.647059, 1)
shader_parameter/base_scroll_speed = 0.02
shader_parameter/additional_scroll_speed = 0.02

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1m005"]
shader = ExtResource("3_imx3e")
shader_parameter/resolution = Vector2(240, 135)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 1.0
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b53dy"]
size = Vector2(34, 10)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tvvh5"]
shader = ExtResource("14_5i2ep")
shader_parameter/lights = null
shader_parameter/lightRadiusAr = null
shader_parameter/lightColorAr = null
shader_parameter/lightBrightnesAr = null
shader_parameter/lightColor = Color(1, 1, 1, 1)
shader_parameter/numOfLight = 1
shader_parameter/modColor = Color(0.299547, 0.299547, 0.299547, 1)
shader_parameter/screenScale = 1.0

[node name="TestMap" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_fmd0r")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(272, 319)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="BackGround" type="Node2D" parent="."]
visible = false

[node name="Stars" type="ColorRect" parent="BackGround"]
material = SubResource("ShaderMaterial_0ic8p")
offset_right = 1953.0
offset_bottom = 1301.0
color = Color(0.0899587, 0.0899043, 0.169783, 1)

[node name="CRT" type="ColorRect" parent="BackGround"]
material = SubResource("ShaderMaterial_1m005")
offset_right = 1953.0
offset_bottom = 1301.0
color = Color(0.0899587, 0.0899043, 0.169783, 1)

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = ExtResource("4_t2aa6")
format = 2
layer_0/name = "World"
layer_0/tile_data = PackedInt32Array(0, 65536, 2, 65536, 65536, 2, 131072, 65536, 2, 196608, 65536, 2, 262144, 65536, 2, 327680, 65536, 2, 393216, 65536, 2, 458752, 65536, 2, 524288, 65536, 2, 589824, 65536, 2, 655360, 65536, 2, 720896, 65536, 2, 786432, 65536, 2, 851968, 65536, 2, 917504, 65536, 2, 983040, 65536, 2, 1048576, 65536, 2, 1114112, 65536, 2, 1179648, 65536, 2, 1245184, 65536, 2, 1310720, 65536, 2, 1376256, 65536, 2, 1441792, 65536, 2, 1, 65536, 2, 65537, 65536, 2, 393217, 65536, 2, 458753, 65536, 2, 524289, 65536, 2, 589825, 65536, 2, 655361, 65536, 2, 1441793, 65536, 2, 2, 65536, 2, 65538, 65536, 2, 393218, 65536, 2, 458754, 65536, 2, 524290, 65536, 2, 589826, 65536, 2, 1441794, 65536, 2, 3, 65536, 2, 65539, 65536, 2, 393219, 0, 1, 458755, 0, 2, 524291, 0, 2, 589827, 131072, 4, 1441795, 65536, 2, 4, 65536, 2, 65540, 65536, 2, 393220, 65536, 1, 458756, 65536, 0, 524292, 1048576, 3, 589828, 1048576, 4, 1441796, 65536, 2, 5, 65536, 2, 65541, 65536, 2, 393221, 65536, 1, 458757, 131072, 0, 524293, 1114112, 3, 589829, 1114112, 4, 1441797, 65536, 2, 6, 65536, 2, 65542, 65536, 2, 393222, 65536, 1, 458758, 65536, 0, 524294, 1179648, 3, 589830, 1179648, 4, 720902, 65536, 2, 786438, 262144, 0, 851974, 262144, 1, 917510, 65536, 1, 983046, 65536, 0, 1048582, 65536, 0, 1114118, 851968, 3, 1179654, 851968, 4, 1245190, 65536, 3, 1310726, 65536, 2, 1376262, 65536, 2, 1441798, 65536, 2, 7, 65536, 2, 65543, 65536, 2, 393223, 65536, 1, 458759, 65536, 0, 524295, 65536, 0, 589831, 65536, 0, 720903, 65536, 2, 786439, 262144, 0, 851975, 262144, 1, 917511, 65536, 1, 983047, 65536, 0, 1048583, 65536, 0, 1114119, 917504, 3, 1179655, 917504, 4, 1245191, 65536, 3, 1310727, 65536, 2, 1376263, 65536, 2, 1441799, 65536, 2, 8, 65536, 2, 65544, 65536, 2, 393224, 65536, 1, 458760, 65536, 0, 524296, 131072, 0, 589832, 65536, 0, 720904, 65536, 2, 786440, 262144, 0, 851976, 262144, 1, 917512, 65536, 1, 983048, 65536, 0, 1048584, 65536, 0, 1114120, 983040, 3, 1179656, 983040, 4, 1245192, 65536, 3, 1310728, 65536, 2, 1376264, 65536, 2, 1441800, 65536, 2, 9, 65536, 2, 65545, 65536, 2, 393225, 65536, 1, 458761, 65536, 0, 524297, 65536, 0, 589833, 65536, 0, 720905, 65536, 2, 786441, 262144, 0, 851977, 262144, 1, 917513, 65536, 1, 983049, 65536, 0, 1048585, 65536, 0, 1114121, 65536, 0, 1179657, 65536, 0, 1245193, 65536, 3, 1310729, 65536, 2, 1376265, 65536, 2, 1441801, 65536, 2, 10, 65536, 2, 65546, 65536, 2, 524298, 196608, 0, 589834, 196608, 4, 720906, 65536, 2, 786442, 393216, 0, 851978, 393216, 1, 917514, 131072, 1, 983050, 131072, 2, 1048586, 196608, 0, 1245194, 131072, 3, 1310730, 65536, 2, 1376266, 65536, 2, 1441802, 65536, 2, 11, 65536, 2, 65547, 65536, 2, 131083, 65536, 2, 196619, 65536, 2, 262155, 65536, 2, 524299, 65536, 3, 589835, 65536, 2, 655371, 65536, 2, 720907, 65536, 2, 786443, 65536, 2, 851979, 65536, 2, 917515, 327680, 0, 983051, 327680, 1, 1048587, 65536, 3, 1245195, 65536, 2, 1310731, 65536, 2, 1376267, 65536, 2, 1441803, 65536, 2, 12, 65536, 2, 65548, 65536, 2, 131084, 65536, 2, 196620, 65536, 2, 262156, 65536, 2, 524300, 65536, 3, 589836, 65536, 2, 655372, 65536, 2, 720908, 65536, 2, 786444, 65536, 2, 851980, 65536, 2, 917516, 393216, 0, 983052, 393216, 1, 1048588, 65536, 3, 1245196, 65536, 2, 1310732, 65536, 2, 1376268, 65536, 2, 1441804, 65536, 2, 13, 65536, 2, 65549, 65536, 2, 131085, 65536, 2, 196621, 327680, 0, 262157, 327680, 1, 524301, 196608, 1, 589837, 0, 2, 655373, 0, 2, 720909, 0, 2, 786445, 0, 2, 851981, 0, 2, 917517, 0, 2, 983053, 0, 2, 1048589, 196608, 1, 1245197, 0, 3, 1310733, 65536, 2, 1376269, 65536, 2, 1441805, 65536, 2, 14, 65536, 2, 65550, 65536, 2, 131086, 65536, 2, 196622, 262144, 0, 262158, 262144, 1, 327694, 65536, 1, 393230, 851968, 3, 458766, 851968, 4, 524302, 65536, 0, 589838, 65536, 0, 786446, 65536, 0, 851982, 131072, 0, 917518, 65536, 0, 1114126, 65536, 0, 1179662, 65536, 0, 1245198, 65536, 3, 1310734, 65536, 2, 1376270, 65536, 2, 1441806, 65536, 2, 15, 65536, 2, 65551, 65536, 2, 131087, 65536, 2, 196623, 1245184, 0, 262159, 1245184, 1, 327695, 65536, 1, 393231, 917504, 3, 458767, 917504, 4, 524303, 65536, 0, 589839, 65536, 0, 786447, 65536, 0, 851983, 65536, 0, 917519, 65536, 0, 1114127, 65536, 0, 1179663, 65536, 0, 1245199, 65536, 3, 1310735, 65536, 2, 1376271, 65536, 2, 1441807, 65536, 2, 16, 65536, 2, 65552, 65536, 2, 131088, 65536, 2, 196624, 458752, 0, 262160, 458752, 1, 327696, 65536, 1, 393232, 917504, 3, 458768, 917504, 4, 524304, 65536, 0, 589840, 65536, 0, 1245200, 1245184, 2, 1310736, 0, 3, 1376272, 65536, 2, 1441808, 65536, 2, 17, 65536, 2, 65553, 65536, 2, 131089, 65536, 2, 196625, 458752, 0, 262161, 458752, 1, 327697, 65536, 1, 393233, 917504, 3, 458769, 917504, 4, 524305, 65536, 0, 1245201, 1310720, 2, 1310737, 131072, 3, 1376273, 65536, 2, 1441809, 65536, 2, 18, 65536, 2, 65554, 65536, 2, 131090, 65536, 2, 196626, 1310720, 0, 262162, 1310720, 1, 327698, 65536, 1, 393234, 917504, 3, 458770, 917504, 4, 524306, 131072, 0, 1245202, 65536, 3, 1310738, 65536, 2, 1376274, 65536, 2, 1441810, 65536, 2, 19, 65536, 2, 65555, 65536, 2, 131091, 65536, 2, 196627, 262144, 0, 262163, 262144, 1, 327699, 65536, 1, 393235, 983040, 3, 458771, 983040, 4, 524307, 65536, 0, 1245203, 65536, 3, 1310739, 65536, 2, 1376275, 65536, 2, 1441811, 65536, 2, 20, 65536, 2, 65556, 65536, 2, 131092, 65536, 2, 196628, 393216, 0, 262164, 393216, 1, 327700, 131072, 1, 393236, 196608, 0, 458772, 131072, 2, 524308, 131072, 2, 589844, 131072, 2, 655380, 131072, 2, 720916, 131072, 2, 786452, 65536, 0, 851988, 65536, 0, 917524, 131072, 0, 983060, 65536, 0, 1048596, 196608, 0, 1114132, 196608, 4, 1179668, 196608, 4, 1245204, 131072, 3, 1310740, 65536, 2, 1376276, 65536, 2, 1441812, 65536, 2, 21, 65536, 2, 65557, 65536, 2, 131093, 65536, 2, 196629, 65536, 2, 262165, 327680, 0, 327701, 327680, 1, 393237, 65536, 3, 458773, 65536, 2, 524309, 65536, 2, 589845, 65536, 2, 655381, 1310720, 3, 720917, 1310720, 4, 786453, 65536, 1, 851989, 1048576, 3, 983061, 1048576, 4, 1310741, 65536, 2, 1376277, 65536, 2, 1441813, 65536, 2, 22, 65536, 2, 65558, 65536, 2, 131094, 65536, 2, 196630, 65536, 2, 262166, 393216, 0, 327702, 393216, 1, 393238, 65536, 3, 458774, 65536, 2, 524310, 65536, 2, 589846, 65536, 2, 655382, 1245184, 3, 720918, 1245184, 4, 983062, 1114112, 4, 1376278, 65536, 2, 1441814, 65536, 2, 23, 65536, 2, 65559, 65536, 2, 131095, 65536, 2, 196631, 327680, 0, 262167, 327680, 1, 327703, 0, 1, 393239, 196608, 1, 458775, 131072, 4, 524311, 0, 3, 1376279, 65536, 2, 1441815, 65536, 2, 24, 65536, 2, 65560, 65536, 2, 131096, 65536, 2, 196632, 262144, 0, 262168, 262144, 1, 524312, 65536, 3, 1376280, 65536, 2, 1441816, 65536, 2, 25, 65536, 2, 65561, 65536, 2, 131097, 65536, 2, 196633, 458752, 0, 262169, 458752, 1, 327705, 65536, 0, 393241, 65536, 0, 458777, 65536, 0, 524313, 65536, 3, 1376281, 65536, 2, 1441817, 65536, 2, 26, 65536, 2, 65562, 65536, 2, 131098, 65536, 2, 196634, 262144, 0, 262170, 262144, 1, 524314, 65536, 3, 1376282, 65536, 2, 1441818, 65536, 2, 27, 65536, 2, 65563, 65536, 2, 131099, 65536, 2, 196635, 262144, 0, 262171, 262144, 1, 524315, 65536, 3, 1376283, 65536, 2, 1441819, 65536, 2, 28, 65536, 2, 65564, 65536, 2, 131100, 65536, 2, 196636, 458752, 0, 262172, 458752, 1, 524316, 65536, 3, 1376284, 65536, 2, 1441820, 65536, 2, 29, 65536, 2, 65565, 65536, 2, 131101, 65536, 2, 196637, 262144, 0, 262173, 262144, 1, 524317, 65536, 3, 1376285, 65536, 2, 1441821, 65536, 2, 30, 65536, 2, 65566, 65536, 2, 131102, 65536, 2, 196638, 393216, 0, 262174, 393216, 1, 327710, 131072, 1, 393246, 131072, 2, 458782, 196608, 4, 524318, 131072, 3, 1376286, 65536, 2, 1441822, 65536, 2, 31, 65536, 2, 65567, 65536, 2, 131103, 65536, 2, 196639, 65536, 2, 262175, 65536, 2, 327711, 65536, 2, 393247, 65536, 2, 458783, 65536, 2, 524319, 65536, 2, 1376287, 65536, 2, 1441823, 65536, 2, 32, 65536, 2, 65568, 65536, 2, 131104, 65536, 2, 196640, 65536, 2, 262176, 65536, 2, 327712, 65536, 2, 393248, 65536, 2, 458784, 65536, 2, 524320, 65536, 2, 589856, 65536, 2, 655392, 65536, 2, 720928, 65536, 2, 786464, 65536, 2, 852000, 65536, 2, 917536, 65536, 2, 983072, 65536, 2, 1048608, 65536, 2, 1114144, 65536, 2, 1179680, 65536, 2, 1245216, 65536, 2, 1310752, 65536, 2, 1376288, 65536, 2, 1441824, 65536, 2, 33, 65536, 2, 65569, 65536, 2, 131105, 65536, 2, 196641, 65536, 2, 262177, 65536, 2, 327713, 65536, 2, 393249, 65536, 2, 458785, 65536, 2, 524321, 65536, 2, 589857, 65536, 2, 655393, 65536, 2, 720929, 65536, 2, 786465, 65536, 2, 852001, 65536, 2, 917537, 65536, 2, 983073, 65536, 2, 1048609, 65536, 2, 1114145, 65536, 2, 1179681, 65536, 2, 1245217, 65536, 2, 1310753, 65536, 2, 1376289, 65536, 2, 1441825, 65536, 2, 196609, 65536, 2, 262145, 65536, 2, 327681, 65536, 2, 196610, 65536, 2, 262146, 65536, 2, 327682, 65536, 2, 196611, 65536, 2, 262147, 327680, 0, 327683, 327680, 1, 196612, 65536, 2, 262148, 262144, 0, 327684, 262144, 1, 196613, 65536, 2, 262149, 1245184, 0, 327685, 1245184, 1, 196614, 65536, 2, 262150, 1310720, 0, 327686, 1310720, 1, 196615, 65536, 2, 262151, 262144, 0, 327687, 262144, 1, 196616, 65536, 2, 262152, 262144, 0, 327688, 262144, 1, 196617, 65536, 2, 262153, 458752, 0, 327689, 458752, 1, 196618, 65536, 2, 262154, 393216, 0, 655362, 65536, 2, 655363, 0, 3, 655364, 65536, 3, 655365, 65536, 3, 655366, 65536, 3, 655367, 65536, 3, 655368, 65536, 3, 655369, 65536, 3, 655370, 131072, 3, 131073, 65536, 2, 131074, 65536, 2, 131075, 65536, 2, 131076, 65536, 2, 131077, 65536, 2, 131078, 65536, 2, 131079, 65536, 2, 131080, 65536, 2, 131081, 65536, 2, 131082, 65536, 2, 1245206, 65536, 2, 1310742, 65536, 2, 1245207, 65536, 2, 1310743, 65536, 2, 1245208, 65536, 2, 1310744, 65536, 2, 1245209, 65536, 2, 1310745, 65536, 2, 1245210, 65536, 2, 1310746, 65536, 2, 1245211, 65536, 2, 1310747, 65536, 2, 1245212, 65536, 2, 1310748, 65536, 2, 1245213, 65536, 2, 1310749, 65536, 2, 1245214, 65536, 2, 1310750, 65536, 2, 1245215, 65536, 2, 1310751, 65536, 2, 1179670, 65536, 2, 1179671, 65536, 2, 1179672, 65536, 2, 1179673, 65536, 2, 1179674, 65536, 2, 1179675, 65536, 2, 1179676, 65536, 2, 1179677, 65536, 2, 1179678, 65536, 2, 1179679, 65536, 2, 1114134, 65536, 2, 1048598, 65536, 3, 1114133, 65536, 2, 1179669, 65536, 2, 1245205, 65536, 2, 1048597, 65536, 3, 720899, 65536, 2, 786435, 65536, 2, 851971, 65536, 2, 917507, 65536, 2, 983043, 65536, 2, 1048579, 65536, 2, 1114115, 65536, 2, 1179651, 65536, 2, 1245187, 65536, 2, 1310723, 65536, 2, 1376259, 65536, 2, 720900, 65536, 2, 786436, 65536, 2, 851972, 65536, 2, 917508, 65536, 2, 983044, 65536, 2, 1048580, 65536, 2, 1114116, 65536, 2, 1179652, 65536, 2, 1245188, 65536, 2, 1310724, 65536, 2, 1376260, 65536, 2, 720901, 65536, 2, 786437, 327680, 0, 851973, 327680, 1, 917509, 0, 1, 983045, 0, 2, 1048581, 0, 2, 1114117, 0, 2, 1179653, 131072, 4, 1245189, 0, 3, 1310725, 65536, 2, 1376261, 65536, 2, 720897, 65536, 2, 786433, 65536, 2, 851969, 65536, 2, 917505, 65536, 2, 983041, 65536, 2, 1048577, 65536, 2, 1114113, 65536, 2, 1179649, 65536, 2, 1245185, 65536, 2, 1310721, 65536, 2, 1376257, 65536, 2, 720898, 65536, 2, 786434, 65536, 2, 851970, 65536, 2, 917506, 65536, 2, 983042, 65536, 2, 1048578, 65536, 2, 1114114, 65536, 2, 1179650, 65536, 2, 1245186, 65536, 2, 1310722, 65536, 2, 1376258, 65536, 2, 1114123, 65536, 2, 1114125, 131072, 4, 1179661, 131072, 4, 1179658, 196608, 4, 1179660, 65536, 2, 1114122, 196608, 4, 1179659, 65536, 2, 1114124, 65536, 2, 1179666, 65536, 0, 1179667, 65536, 0, 720910, 65536, 0, 720911, 65536, 0, 655374, 65536, 0, 655375, 65536, 0, 1114130, 65536, 0, 1114131, 65536, 0, 655378, 1048576, 3, 720914, 1048576, 5, 786450, 1048576, 5, 851986, 1048576, 5, 655379, 1179648, 3, 720915, 1179648, 5, 786451, 1179648, 5, 851987, 1179648, 5, 917522, 1048576, 4, 917523, 1179648, 4, 983057, 65536, 0, 1048593, 65536, 0, 983058, 65536, 0, 1048594, 65536, 0, 983059, 65536, 0, 1048595, 65536, 0, 983054, 65536, 0, 1048590, 65536, 0, 983055, 65536, 0, 1048591, 65536, 0, 983056, 65536, 0, 1048592, 65536, 0, 589841, 65536, 0, 589842, 65536, 0, 589843, 65536, 0, 1179664, 851968, 3, 1179665, 983040, 3, 1114128, 65536, 0, 1114129, 65536, 0, 327709, 1179648, 3, 393245, 1179648, 5, 458781, 1179648, 4, 327707, 1048576, 3, 393243, 1048576, 5, 458779, 1048576, 4, 327708, 1114112, 3, 393244, 1114112, 5, 458780, 1114112, 4, 327706, 65536, 0, 393242, 65536, 0, 458778, 65536, 0, 327704, 65536, 0, 393240, 65536, 0, 458776, 65536, 0, 327690, 393216, 1, 393226, 131072, 1, 458762, 131072, 1, 458763, 327680, 1, 458764, 393216, 1, 327693, 0, 1, 393229, 0, 2, 458765, 0, 2, 393227, 327680, 0, 393228, 393216, 0, 327692, 65536, 2, 327691, 65536, 2, 786454, 65536, 1, 851990, 1114112, 3, 589847, 65536, 2, 655383, 1441792, 3, 720919, 1245184, 4, 786455, 65536, 1, 851991, 1114112, 3, 983063, 1114112, 4, 1048599, 65536, 3, 1114135, 65536, 2, 589848, 65536, 2, 655384, 1441792, 3, 720920, 1441792, 4, 786456, 65536, 1, 851992, 1114112, 3, 983064, 1114112, 4, 1048600, 65536, 3, 1114136, 65536, 2, 589849, 65536, 2, 655385, 1441792, 3, 720921, 1245184, 4, 786457, 65536, 1, 851993, 1114112, 3, 983065, 1114112, 4, 1048601, 65536, 3, 1114137, 65536, 2, 589850, 65536, 2, 655386, 1441792, 3, 720922, 1441792, 4, 786458, 65536, 1, 851994, 1114112, 3, 983066, 1114112, 4, 1048602, 65536, 3, 1114138, 65536, 2, 589851, 65536, 2, 655387, 1245184, 3, 720923, 1441792, 4, 786459, 65536, 1, 851995, 1179648, 3, 983067, 1179648, 4, 1048603, 65536, 3, 1114139, 65536, 2, 589852, 65536, 2, 655388, 1376256, 3, 720924, 1376256, 4, 786460, 131072, 1, 851996, 131072, 2, 917532, 131072, 2, 983068, 196608, 4, 1048604, 131072, 3, 1114140, 65536, 2, 589853, 65536, 2, 655389, 65536, 2, 720925, 65536, 2, 786461, 65536, 2, 851997, 65536, 2, 917533, 65536, 2, 983069, 65536, 2, 1048605, 65536, 2, 1114141, 65536, 2, 589854, 65536, 2, 655390, 65536, 2, 720926, 65536, 2, 786462, 65536, 2, 851998, 65536, 2, 917534, 65536, 2, 983070, 65536, 2, 1048606, 65536, 2, 1114142, 65536, 2, 589855, 65536, 2, 655391, 65536, 2, 720927, 65536, 2, 786463, 65536, 2, 851999, 65536, 2, 917535, 65536, 2, 983071, 65536, 2, 1048607, 65536, 2, 1114143, 65536, 2, 917525, 1048576, 5, 917531, 1179648, 5, 917530, 1114112, 5, 917529, 1114112, 5, 917528, 1114112, 5, 917527, 1114112, 5, 917526, 1114112, 5, 655376, 65536, 0, 720912, 131072, 0, 786448, 65536, 0, 851984, 65536, 0, 917520, 65536, 0, 655377, 65536, 0, 720913, 65536, 0, 786449, 65536, 0, 851985, 65536, 0, 917521, 131072, 0)
layer_1/name = "NPC"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(851976, 1376256, 1, 917512, 1376256, 2, 851977, 1441792, 1, 917513, 1441792, 2, 720909, 917504, 5, 786445, 917504, 6, 851981, 917504, 7, 1114122, 983040, 5, 1179658, 983040, 6, 1245194, 983040, 7, 851973, 1245184, 6, 917509, 1245184, 7, 983045, 1245184, 8, 1048581, 1245184, 9, 851974, 1310720, 6, 917510, 1310720, 7, 983046, 1310720, 8, 1048582, 1310720, 9, 851975, 1376256, 6, 917511, 1376256, 7, 983047, 1376256, 8, 1048583, 1376256, 9, 262162, 1310720, 11, 327698, 1310720, 12, 393234, 1310720, 13, 262163, 1376256, 11, 327699, 1376256, 12, 393235, 1376256, 13, 262161, 1245184, 11, 327697, 1245184, 12, 393233, 1245184, 13, 262158, 1245184, 11, 327694, 1245184, 12, 262159, 1310720, 11, 327695, 1310720, 12, 262160, 1376256, 11, 327696, 1376256, 12, 327683, 1048576, 6, 393219, 1048576, 7, 458755, 1048576, 8, 524291, 1048576, 9, 327684, 1114112, 6, 393220, 1114112, 7, 458756, 1114112, 8, 524292, 1114112, 9, 327685, 1179648, 6, 393221, 1179648, 7, 458757, 1179648, 8, 524293, 1179648, 9, 327687, 1114112, 6, 393223, 1114112, 7, 458759, 1114112, 8, 524295, 1114112, 9, 327688, 1179648, 6, 393224, 1179648, 7, 458760, 1179648, 8, 524296, 1179648, 9, 327686, 1048576, 6, 393222, 1048576, 7, 458758, 1048576, 8, 524294, 1048576, 9, 262171, 1048576, 6, 327707, 1048576, 7, 393243, 1048576, 8, 458779, 1048576, 9, 262172, 1114112, 6, 327708, 1114112, 7, 393244, 1114112, 8, 458780, 1114112, 9, 262173, 1179648, 6, 327709, 1179648, 7, 393245, 1179648, 8, 458781, 1179648, 9, 393230, 1245184, 13, 393231, 1310720, 13, 393232, 1376256, 13, 262168, 1376256, 1, 327704, 1376256, 2, 262169, 1441792, 1, 327705, 1441792, 2, 327689, 917504, 14, 393225, 917504, 15, 196625, 1245184, 10, 196622, 1245184, 10, 720919, 1245184, 16, 786455, 1245184, 17, 720921, 1048576, 14, 786457, 1048576, 15, 720922, 1179648, 14, 786458, 1179648, 15, 720923, 1114112, 14, 786459, 1114112, 15, 720924, 1310720, 14, 786460, 1310720, 15, 720920, 983040, 14, 786456, 983040, 15, 851996, 1376256, 14, 917532, 1376256, 15, 983067, 917504, 14, 1048603, 917504, 15, 720918, 917504, 14, 786454, 917504, 15)
layer_2/name = "Fence"
layer_2/y_sort_enabled = true
script = ExtResource("5_elis8")

[node name="BottomRight" type="Marker2D" parent="TileMap"]
position = Vector2(544, 368)

[node name="Chacters" type="Node2D" parent="."]
y_sort_enabled = true
script = ExtResource("6_qhikm")

[node name="Area2D_Change_Scene" type="Area2D" parent="Chacters"]
position = Vector2(0, 3)
collision_layer = 2
collision_mask = 2
script = ExtResource("7_rxl3x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chacters/Area2D_Change_Scene"]
position = Vector2(272, 334)
shape = SubResource("RectangleShape2D_b53dy")

[node name="Trigers" type="Node2D" parent="Chacters"]

[node name="Player" parent="Chacters" instance=ExtResource("10_bj6lp")]
position = Vector2(272, 319)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Chacters/Player"]
remote_path = NodePath("../../../Camera2D")

[node name="Wryan" parent="Chacters" instance=ExtResource("11_tj8p1")]
position = Vector2(-16, -16)

[node name="Primo" parent="Chacters" instance=ExtResource("12_86oiy")]
position = Vector2(-16, -16)
file_sound_path = "res://Sounds/primo voice.ogg"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Chacters/Primo"]
position = Vector2(0, -8)
remote_path = NodePath("../../CutScene Camera")

[node name="world dialogue" type="Node" parent="Chacters"]
script = ExtResource("13_4pqbm")

[node name="CutScene Camera" type="Node2D" parent="Chacters"]
position = Vector2(-16, -24)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Chacters/CutScene Camera"]

[node name="Lighting" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Lighting"]
material = SubResource("ShaderMaterial_tvvh5")
offset_right = 480.0
offset_bottom = 270.0
mouse_filter = 2
script = ExtResource("15_4w327")

[connection signal="body_entered" from="Chacters/Area2D_Change_Scene" to="Chacters/Area2D_Change_Scene" method="_on_body_entered"]
[connection signal="change_scene" from="Chacters/Area2D_Change_Scene" to="." method="on_change_scene"]
[connection signal="event" from="Chacters/Player" to="Chacters" method="move_char_to_location"]
[connection signal="event_anim" from="Chacters/Player" to="Chacters" method="_on_player_event_anim"]
[connection signal="event_finished" from="Chacters/Player" to="Chacters" method="_on_player_event_finished"]
[connection signal="on_char_reached_loaction" from="Chacters/Player" to="Chacters" method="_on_wryan_on_char_reached_loaction"]
[connection signal="pass_camera" from="Chacters/Player" to="Chacters" method="_on_player_pass_camera"]
[connection signal="on_char_reached_loaction" from="Chacters/Wryan" to="Chacters" method="_on_wryan_on_char_reached_loaction"]
[connection signal="on_char_reached_loaction" from="Chacters/Primo" to="Chacters" method="_on_wryan_on_char_reached_loaction"]
